--- a/HW5/index.html
+++ b/HW5/index.html
@@ -36,7 +36,7 @@ https://mdbootstrap.com/docs/jquery/tables/scroll/
       <!--Input section-->
       <div class="container row ml-auto mr-auto justify-content-center">
         <!--Asks for first input-->
-        <div class="container rounded-circle bg-info col-md-5">
+        <div class="container rounded-container bg-info col-md-5">
           <p> Enter the first range </p>
           <div class="form-group">
             <label>Input 1 Lower Bound</label>
@@ -52,7 +52,7 @@ https://mdbootstrap.com/docs/jquery/tables/scroll/
 
         </div>
         <!--Asks for the second input-->
-        <div class="container rounded-circle bg-primary col-md-5">
+        <div class="container rounded-container bg-primary col-md-5">
           <p> Enter the second range </p>
           <div class="form-group">
             <label>Input 2 Lower Bound</label>
