--- a/HW6/index.html
+++ b/HW6/index.html
@@ -71,7 +71,7 @@ https://mdbootstrap.com/docs/jquery/tables/scroll/
       <!--This shows an error if an incorrect input is set-->
       <p class= "text-danger" id = "warning"></p>
       <!--Submits the inputs and generates the table.-->
-      <input type="button" onClick="createTable()" value="Submit">
+      <input type="submit" value="Submit">
     </form>
     <!--This div class probides the table with formatting like scrollbars-->
     <div class="table-wrapper-scroll-y table-design my-custom-scrollbar text-center">
